# greener

./: .dockerignore  .gitignore  .mockery.yaml  CONTRIBUTING.md  Dockerfile  README.md  build.js  compose.yaml  entrypoint.sh  flake.nix  go.mod  go.sum  index.md  lefthook.yml  nginx.conf  package-lock.json  package.json  supervisord.conf  tailwind.config.js  unit.json  upgrade_dependencies.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  ensure-single-commit.yml  publish-docs.yml  release.yml
assets/: assets.go
assets/templates/: apikeys.html  groups.html  groups_table.html  login.html  session_detail.html  sessions.html  sessions_table.html  testcase_detail.html  testcases.html  testcases_rows.html  testcases_table.html
client-blazor/: .gitignore  GreenerBlazor.sln  justfile
client-blazor/GreenerBlazor/: App.razor  AppJsonSerializerContext.cs  GreenerBlazor.csproj  (+2 more)
core/: apikeys.go  apikeys_test.go  auth.go  doc.go  groups.go  handlers_test.go  ingress.go  login.go  migrate.go  query_service.go  query_service_mock.go  query_service_test.go  sessions.go  sql_builder.go  sql_builder_test.go  testcases.go  testutil_test.go  util.go
docs/: justfile  mkdocs.yml
migration/: .gitignore  Cargo.toml  go.mod  go.sum  main.go
migration/db/mysql/: 20251104172250_initial.sql
migration/db/postgres/: 20251104172250_initial.sql
migration/db/sqlite/: 20251104172250_initial.sql
migration/src/: lib.rs  m20251027_203359_initial.rs  main.rs
scripts/: 10-migrate.sh
server/: .dir-locals.el  .gitignore  .mockery.yaml  .tokeignore  alembic.ini  flake.nix  go.mod  go.sum  package-lock.json  package.json  pip-reqs.txt  pyproject.toml  unit.json
server/alembic/: env.py
server/alembic/versions/: ebee5d3831a2_initial.py
server/app/: app.py  app_init.py  models.py  util.py
server/app/controllers/: __init__.py  apikey_controller.py  auth_controller.py  group_controller.py  ingress_controller.py  label_controller.py  ready_controller.py  session_controller.py  testcase_controller.py  util.py
server/app/query/: __init__.py  ast.py  grammar.lark  parser.py
server/assets/migrations/sqlite/: 20260202000000_user_roles.sql
server/assets/static/src/: app.js  query-editor.js
server/assets/templates/: base.html  login.html  oauth_authorize.html  query_editor.html  sessions.html  sessions_table.html  testcases_table.html
server/assets/templates/components/: navbar.html  status_icon.html
server/cmd/greener/: main.go
server/cmd/greener-admin/: main.go
server/core/: apikeys.go  apikeys_test.go  auth.go  groups.go  handlers_test.go  ingress.go  login.go  migrate.go  query_service.go  query_service_mock.go  query_service_test.go  sessions.go  sql_builder.go  sql_builder_test.go  testcases.go  testutil_test.go  util.go
server/core/dbutil/: dbutil.go
server/core/mcp/: context.go  server.go  tools_query.go  tools_query_test.go
server/core/model/db/: db.go
server/core/oauth/: middleware.go  server.go  store.go
server/core/query/: doc.go  parser.go  parser_gen.go
server/tests/: conftest.py  test_apikey_controller.py  test_auth_controller.py  test_group_controller.py  test_ingress_controller.py  test_label_controller.py  test_query_parser.py  test_session_controller.py  test_testcase_controller.py
tests_e2e/: conftest.py  requirements.txt  test_e2e.py
util/greener-admin-cli/: .gitignore  Cargo.toml  go.mod  go.sum  main.go
util/greener-admin-cli/src/: main.rs  user.rs
(+108 files in other folders)
