[package]
name = "greener-migration"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "~2.0.0-rc"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-mysql",
  "sqlx-sqlite",
]
