[project]
name = "greener-server"
version = "0.0.1"
description = "Greener server"
authors = [
    {name = "cephei8"}
]
requires-python = ">=3.13,<4.0"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]
litestar = {extras = ["standard", "jwt", "sqlalchemy"], version = "^2.18.0"}
advanced-alchemy = "^1.7.0"
aiosqlite = "^0.21.0"
lark = "^1.2.2"
pydantic = "^2.12.4"
asyncpg = "^0.30.0"
asyncmy = "^0.2.9"
psycopg = "^3.2.13"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
coverage = "^7.12.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^7.0.0"
testcontainers = "^4.13.3"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
pyflakes = "^3.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    ".venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "assert_never\\(",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
