[package]
name = "greener-admin-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
